fixed alignment of viropayti on navbar

--- a/react-app/src/components/navBar/navBar.css
+++ b/react-app/src/components/navBar/navBar.css
@@ -125,8 +125,9 @@ body {
     font-family: cursive;
     color: white;
     /* margin-right: 60%;*/
-    padding-top: 2%; 
+    padding-top: 1.5%; 
     padding-left: 2%;
+    
 }
 
 
